Fix z-index

--- a/tools/docs/api/tree-to-menu-fragment/static/styles.css
+++ b/tools/docs/api/tree-to-menu-fragment/static/styles.css
@@ -235,7 +235,7 @@
 * Style the slideout menu background.
 */
 .slideout-menu-background {
-	z-index: -1;
+	z-index: 0;
 
 	background-color: #1D1F20; /* fallback */
 
